feat: Se agrego el panel

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,8 @@
 #main-footer {
-    margin-top: 200px !important;
+    margin-top: 282px !important;
 }
+
+/* .footer{
+    position:static;
+    bottom: 0;
+} */
